Sanity checking Xint with the pickiest GC